log
Tue 07 May 2024 02:55:50 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
0661abb
Tue 07 May 2024 03:06:47 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3c0bfb1
Tue 07 May 2024 03:08:16 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:75: error: expected ‘:’ before ‘}’ token
   79 |             aux = (tree->lower_than(key, aux->pair->key) == 1) ? aux->left
      |                                                                           ^
      |                                                                           :
   80 | 
   81 |         }
      |         ~                                                                  
Compilation failed
6c38f25
Tue 07 May 2024 03:08:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:17: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   79 |             aux = (tree->lower_than(key, aux->pair->key) == 1);
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
7150af0
Tue 07 May 2024 03:10:55 AM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  6|6
total_score: 5/70
15c188e
Tue 07 May 2024 03:13:54 AM UTC: 
 treemap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
 tests:  0|0
eac1d43
Tue 07 May 2024 03:14:15 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:133:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  133 |     return;
      |     ^~~~~~
treemap.c:114:8: note: declared here
  114 | Pair * searchTreeMap(TreeMap * tree, void* key)
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
afa315f
Tue 07 May 2024 03:14:29 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 5/70
d836964
